--- a/books-app/package.json
+++ b/books-app/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "notes-app",
+  "name": "books-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server.js",
+    "start": "node src/server.js",
     "lint": "eslint ./src"
   },
   "keywords": [],
@@ -16,8 +15,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.3.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^3.0.2"
+    "eslint-plugin-promise": "^6.1.1"
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
